--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ATM1</string>
     <string name="action_settings">Settings</string>
+    <string name="setting">Setting</string>
+    <string name="help">Help</string>
 </resources>
